# spar-engine

./: CHANGELOG.md  ClineRules.txt  PARKING_LOT.md  README.md  pyproject.toml  run_campaign_validation.py
campaigns/: space_opera_test_campaign_history_20251226.md  space_opera_test_session_003_20251226.md
data/: README.md  aftermath_expansion_design.md  core_complications.json  salvage_black_market_loot.json
docs/: ARCH_campaign_integration.md  CAMPAIGN_RHYTHM_RUNNER_DESIGN.md  GPT_CLINE_WORKFLOW.md  IMPLEMENTATION_REPORT_adaptive_weighting.md  IMPLEMENTATION_REPORT_cutoff_tuning.md  IMPLEMENTATION_SUMMARY_aftermath_content.md  IMPLEMENTATION_SUMMARY_aftermath_low_urgency.md  IMPLEMENTATION_SUMMARY_faction_crud_v0.1.md  INTEGRATION_STATUS_flows_BCD.md  ISSUE_REPORT_content_availability.md  KEY_DOCS.md  LOOT_DIAGNOSTICS_GUIDE.md  PLAY_GUIDE_campaigns.md  REQUIREMENTS_campaign_mechanics_v0.1.md  REQUIREMENTS_json_scenario_import_export.md  REQUIREMENTS_multi_pack_loading_v1.2.md  REQUIREMENTS_parser_v0.6_real_world_fixes.md  REQUIREMENTS_robust_history_parser.md  RESOLUTION_SUMMARY_content_availability.md  ROOT_CAUSE_ANALYSIS_content_availability.md  Streamlit_Harness_Requirements_Architecture.md  UX_NOTES_campaign_v0.1.md  project_context.md
scenarios/: PresetsEngageNormalQuick_scenario_suite_report.json  campaign_rhythm_normal.json  campaign_rhythm_spiky.json  presets_x_engage_x_normal_spikey_20251225_144431.json  scenario_template.json
spar_campaign/: campaign.py  models.py
spar_engine/: severity.py
streamlit_harness/: __init__.py  app.py  campaign_context.py  (+2 more)
(+23 files in other folders)
