[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spar-tool-engine"
version = "1.0.0"
description = "SPAR Tool Engine v1.0 - Campaign memory system with faction influence"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["spar_engine*", "spar_campaign*"]
exclude = ["data*", "streamlit_harness*", "tests*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
